# simc

./: CMakeLists.txt  CMakeSettings.json
SpellDataDump/: build_info.txt  deathknight.txt  demonhunter.txt  druid.txt  evoker.txt  hunter.txt  mage.txt  monk.txt  paladin.txt  priest.txt  rogue.txt  shaman.txt  spelldatadump.bat  warlock.txt  warrior.txt
casc_extract/: dbfile
dbc_extract3/: dbc_extract.py  live.conf
dbc_extract3/dbc/: __init__.py  constants.py  data.py  filter.py  generator.py  wdc1.py  xfth.py
dbc_extract3/formats/: 3.4.3.51943.json  4.4.0.53627.json  4.4.0.53863.json  4.4.0.54217.json  4.4.0.54339.json  4.4.0.54377.json  4.4.0.54558.json
engine/: CMakeLists.txt  config.hpp  sc_enums.hpp
engine/action/: action.cpp  action.hpp  attack.cpp  attack.hpp  spell.cpp
engine/buff/: buff.cpp
engine/class_modules/: sc_death_knight.cpp  sc_demon_hunter.cpp  sc_druid.cpp  sc_enemy.cpp  sc_evoker.cpp  sc_hunter.cpp  sc_mage.cpp  sc_rogue.cpp  sc_shaman.cpp  sc_warrior.cpp
engine/class_modules/apl/: apl_death_knight.cpp  apl_hunter.cpp  feral_apl.inc  mage.cpp
engine/class_modules/paladin/: sc_paladin.cpp
engine/class_modules/priest/: sc_priest.cpp
engine/class_modules/warlock/: sc_warlock.cpp
engine/dbc/: ap_per_stat.cpp  ap_per_stat.hpp  data_enums.hh  dbc.hpp  glyph_data.cpp  glyph_data.hpp  item_armor.cpp  item_data.hpp  item_database.hpp  item_reforge_data.cpp  item_reforge_data.hpp  item_set_bonus.cpp  item_set_bonus.hpp  meta_gem_cond.cpp  meta_gem_cond.hpp  rand_suffix_data.cpp  rand_suffix_data.hpp  sc_const_data.cpp  sc_extra_data.inc  sc_item_data.cpp  sc_spell_info.cpp  spell_data.cpp  spell_data.hpp  spell_item_enchantment.hpp  talent_data.cpp  talent_data.hpp
engine/interfaces/: bcp_api.cpp  wowhead.cpp
engine/item/: enchants.cpp  enchants.hpp  item.cpp  item.hpp
engine/player/: glyph.cpp  glyph.hpp  player.cpp  player.hpp  player_talent_points.cpp  player_talent_points.hpp  talent.cpp  talent.hpp  unique_gear.cpp
engine/report/: charts.cpp  decorators.cpp  gear_weights.cpp  report_html_player.cpp  report_text.cpp
engine/report/json/: report_json.cpp
engine/sim/: expressions.cpp  profileset.cpp  progress_bar.cpp  scale_factor_control.cpp  sim.cpp  sim.hpp
engine/util/: concurrency.cpp  generic.hpp  util.cpp  util.hpp
engine/wasm/: glue.js  sc_wasm.cpp  sc_wasm.hpp
qt/: MainWindow.cpp  sc_OptionsTab.cpp
source_files/: QT_engine.pri  QT_gui.pri  VS_engine.props  VS_engine_main.props  VS_gui.props  cmake_engine.txt  cmake_engine_main.txt  cmake_gui.txt  engine_main_make  engine_make
